Added insertMealPrep() POST api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div>
-  <p>{{title}}</p>
-  <button (click)="showMealPrep2()">Show Meal Prep</button>
+  <button (click)="insertMealPrep()">Add Meal Prep</button>
+  <button (click)="loadMealPrep()">Show Meal Prep</button>
+  <div *ngFor="let i of mealPrep">
+    <p>{{i | json}}</p>
+  </div>
+  
 </div>
