- Added new Settings UI - Added 'Create New Meal' UI - Added 'Add Meal' API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div>
-  <button (click)="insertMealPrep()">Add Meal Prep</button>
-  <button (click)="loadMealPrep()">Show Meal Prep</button>
-  <div *ngFor="let i of mealPrep">
-    <p>{{i | json}}</p>
-  </div>
-  
-</div>
+<app-nav></app-nav>
