--- a/src/app/components/settings/add-new-meal/add-new-meal.component.scss
+++ b/src/app/components/settings/add-new-meal/add-new-meal.component.scss
@@ -84,7 +84,7 @@ img {
     vertical-align: middle;
 }
 
-.submit-button{
+.button{
     border-radius: 10px;
     font-size: 1.2em;
     margin-top: 30px;
@@ -92,112 +92,63 @@ img {
     margin-bottom: .5rem !important;
     width: 200px;
     height: 35px;
+    color: #fff;
+    overflow: hidden;
+    position: relative;
+    transform: translate3d(0, 0, 0);
+    transition: box-shadow .4s cubic-bezier(.25, .8, .25, 1), transform .4s cubic-bezier(.25, .8, .25, 1);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26)
+}
+
+.button:before{
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: auto;
+    height: auto;
+    pointer-events: none;
+    background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    transform: scale(10, 10);
+    opacity: 0;
+    transition: transform .5s, opacity 1.5s
+}
+
+.button:active:before{
+    transform: scale(0, 0);
+    opacity: .1;
+    transition: 0s
+}
+
+.button:not([disabled]):active,
+.button:not([disabled]):focus,
+.button:not([disabled]):hover {
+    box-shadow: 0 4px 8px 0 rgba(247, 245, 245, 0.4);
+    transform: translate3d(0, -1px, 0)
+}
+
+.button[disabled] {
+    color: rgb(202, 199, 199);
+    background-color: transparent;
+}
+
+.grey {
+    background-color: grey;
+}
+
+.green {
     background-color: green;
-    color: #fff;
-    overflow: hidden;
-    position: relative;
-    transform: translate3d(0, 0, 0);
-    transition: box-shadow .4s cubic-bezier(.25, .8, .25, 1), transform .4s cubic-bezier(.25, .8, .25, 1);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26)
 }
 
-.submit-button:before{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: auto;
-    height: auto;
-    pointer-events: none;
-    background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    transform: scale(10, 10);
-    opacity: 0;
-    transition: transform .5s, opacity 1.5s
+.red {
+    background-color: red;
 }
 
-.submit-button:active:before{
-    transform: scale(0, 0);
-    opacity: .1;
-    transition: 0s
-}
-
-.submit-button:not([disabled]):active,
-.submit-button:not([disabled]):focus,
-.submit-button:not([disabled]):hover {
-    box-shadow: 0 4px 8px 0 rgba(247, 245, 245, 0.4);
-    transform: translate3d(0, -1px, 0)
-}
-
-.submit-button[disabled] {
-    color: rgb(202, 199, 199);
-    background-color: transparent;
-}
-
-.reset-button{
-    border-radius: 10px;
-    font-size: 1.2em;
-    margin-top: 30px;
-    margin-right: 20px;
-    margin-bottom: .5rem !important;
-    width: 200px;
-    height: 35px;
-    background-color: rgb(243, 40, 40);
-    color: #fff;
-    overflow: hidden;
-    position: relative;
-    transform: translate3d(0, 0, 0);
-    transition: box-shadow .4s cubic-bezier(.25, .8, .25, 1), transform .4s cubic-bezier(.25, .8, .25, 1);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26)
-}
-
-.reset-button:before{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: auto;
-    height: auto;
-    pointer-events: none;
-    background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    transform: scale(10, 10);
-    opacity: 0;
-    transition: transform .5s, opacity 1.5s
-}
-
-.reset-button:active:before{
-    transform: scale(0, 0);
-    opacity: .1;
-    transition: 0s
-}
-
-.reset-button:not([disabled]):active,
-.reset-button:not([disabled]):focus,
-.reset-button:not([disabled]):hover {
-    box-shadow: 0 4px 8px 0 rgba(247, 245, 245, 0.4);
-    transform: translate3d(0, -1px, 0)
-}
-
-.reset-button[disabled] {
-    color: rgb(202, 199, 199);
-    background-color: transparent;
-}
-
-.reset-button.mat-button.mat-primary .mat-button-focus-overlay,
-.reset-button.mat-button.mat-accent .mat-button-focus-overlay,
-.reset-button.mat-button.mat-warn .mat-button-focus-overlay
-{
-  background-color: green;
-}
 
 ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-ripple .mat-ripple-element {
     // opacity: 0.03 !important;
