--- a/src/app/components/settings/add-new-meal/add-new-meal.component.scss
+++ b/src/app/components/settings/add-new-meal/add-new-meal.component.scss
@@ -158,3 +158,8 @@ img {
 ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
     background-color: #ffe680;
 }
+
+.success-icon {
+    height: 200px;
+    width: 170px;
+}
