Added 'Manage Meals' UI. - Populate meal data into a mat table - Added getData() api for Meal. - Increase bootstrap default container max width

--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -24,8 +24,14 @@
                         <a class="item-font" mat-list-item [routerLink]="'add-new-meal'">
                             <!-- <i class="fa fa-plus" aria-hidden="true" style="padding-right: 10px;"></i> -->
                             <img src="assets/cooking-icon.png" alt="meal-name">
-                            Add new meal
+                            Add New Meal
                         </a>
+
+                        <a class="item-font" mat-list-item [routerLink]="'manage-meal'">
+                          <!-- <i class="fa fa-plus" aria-hidden="true" style="padding-right: 10px;"></i> -->
+                          <img src="assets/cooking-icon.png" alt="meal-name">
+                          Manage Meal
+                      </a>
                         
                       </mat-nav-list>
                     </mat-drawer>
