--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -3,3 +3,9 @@ img {
     height: 50px;
     margin-right: 10px;
 }
+
+@media (min-width: 1200px) {
+    .container{
+        max-width: 1800px;
+    }
+}
