Added Edit and Delete meal function - Changed theme to light blue color - Added icons to Manage Meal table header - Added sortable header to Manage Meal table

--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -55,11 +55,11 @@ img {
 }
 
 .item-font:hover{
-    background-color: #bbbdc0;
+    background-color: rgb(192, 228, 252);
 }
 
 .item-font:focus{
-    background-color: #bbbdc0;
+    background-color: rgb(192, 228, 252);
 }
 
 .mat-nav-list a.active {
