--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -10,7 +10,7 @@
   </ul>
   <div [ngbNavOutlet]="nav"></div> -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light">
   <img src="assets/meal-prep.png" alt="meal-name" [routerLink]="'home'">
   <a class="navbar-brand" [routerLink]="'home'">Meal Prep</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
