--- a/src/app/components/settings/manage-meal/manage-meal.component.html
+++ b/src/app/components/settings/manage-meal/manage-meal.component.html
@@ -6,34 +6,40 @@
 
     <table mat-table matSort [dataSource]="dataSource" class="transaction-summary-table">
         <ng-container matColumnDef="mealName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Meal Name</th>
-            <td mat-cell *matCellDef="let elem"> {{elem.mealName}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                <img src="assets/meal-name.png" alt="meal-name">Meal Name</th>
+            <td mat-cell *matCellDef="let elem" [ngClass]="{'font-bold':true}"> {{elem.mealName}} </td>
         </ng-container>
         <ng-container matColumnDef="protein">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Protein</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                <img src="assets/protein-icon.png" alt="meal-name">Protein</th>
             <td mat-cell *matCellDef="let elem"> {{elem.protein}} </td>
         </ng-container>
         <ng-container matColumnDef="carbs">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Carbs</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                <img src="assets/carbs-icon.png" alt="meal-name">Carbs</th>
             <td mat-cell *matCellDef="let elem">{{elem.carbs}}</td>
         </ng-container>
         <ng-container matColumnDef="veggies">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Veggies</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                <img src="assets/veggies-icon.png" alt="meal-name">Veggies</th>
             <td mat-cell *matCellDef="let elem"> {{elem.veggies}} </td>
         </ng-container>
         <ng-container matColumnDef="remark">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Remark</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                <img src="assets/remark-icon.jpg" alt="meal-name">Remark</th>
             <td mat-cell *matCellDef="let elem">{{elem.remark}}</td>
         </ng-container>
         <ng-container matColumnDef="timestamp">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Inserted</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                <mat-icon style="margin-right: 7px;">date_range</mat-icon>Date Inserted</th>
             <td mat-cell *matCellDef="let elem"> {{elem.timestamp}} </td>
         </ng-container>
 
         <ng-container matColumnDef="deleteRow">
             <th mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let elem" [ngClass]="{'no-padding':true}">
-               <button mat-icon-button color="warn" aria-label="Delete Button" (click)="onDelete(elem)">
+              <button mat-icon-button color="warn" aria-label="Delete Button" (click)="onDelete(elem)">
                 <mat-icon>delete</mat-icon>
               </button>
 
