--- a/src/app/components/settings/manage-meal/manage-meal.component.scss
+++ b/src/app/components/settings/manage-meal/manage-meal.component.scss
@@ -17,6 +17,17 @@ table {
     padding: 0px 10px;
 }
 
+.mat-column-remark {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 28% !important;
+    width: 28% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-word;
+}
+
 .mat-cell {
     white-space: nowrap;
     // border-right: 1px solid rgb(179, 177, 177);
@@ -41,85 +52,15 @@ table {
 }
 
 img {
-    width: 30px;
-    height: 30px;
-}
-
-.button{
-    border-radius: 10px;
-    font-size: 1.2em;
-    margin-top: 30px;
-    margin-right: 20px;
-    margin-bottom: .5rem !important;
-    width: 200px;
-    height: 35px;
-    color: #fff;
-    overflow: hidden;
-    position: relative;
-    transform: translate3d(0, 0, 0);
-    transition: box-shadow .4s cubic-bezier(.25, .8, .25, 1), transform .4s cubic-bezier(.25, .8, .25, 1);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26)
-}
-
-.button:before{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: auto;
-    height: auto;
-    pointer-events: none;
-    background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    transform: scale(10, 10);
-    opacity: 0;
-    transition: transform .5s, opacity 1.5s
-}
-
-.button:active:before{
-    transform: scale(0, 0);
-    opacity: .1;
-    transition: 0s
-}
-
-.button:not([disabled]):active,
-.button:not([disabled]):focus,
-.button:not([disabled]):hover {
-    box-shadow: 0 4px 8px 0 rgba(247, 245, 245, 0.4);
-    transform: translate3d(0, -1px, 0)
-}
-
-.button[disabled] {
-    color: rgb(202, 199, 199);
-    background-color: transparent;
-}
-
-.grey {
-    background-color: grey;
-}
-
-.green {
-    background-color: green;
-}
-
-.red {
-    background-color: red;
-}
-
-
-::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-ripple .mat-ripple-element {
-    // opacity: 0.03 !important;
-    background-color: #ffe680!important;
-}
-
-::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-    background-color: #ffe680;
+    width: 25px;
+    height: 25px;
+    margin-right: 7px;
 }
 
 .no-padding {
     padding: 0;
+}
+
+.font-bold {
+    font-weight: bold;
 }
